--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Biryani by Kilo</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap"
@@ -46,12 +47,205 @@
       </div>
     </header>
     <div class="middle-section">
-      <br> 
+      <br />
       <div class="banner-add"></div>
-      <br>
-      <div class="middle-text">
-        <p>Winning hearts with Dum Cooked Fresh Handi Biryanis</p>
+      <br />
+    </div>
+    <div class="middle-text">
+      <p>Winning hearts with Dum Cooked Fresh Handi Biryanis</p>
+    </div>
+    <div class="middle-section-info">
+      <br />
+      <div class="info-container">
+        <div class="sub1">
+          <div class="circular-img">
+            <a href=""><img src="Shop-1.png" alt="" class="img-prop" /></a>
+          </div>
+          <p class="uppertext">100+ Outlets Across India</p>
+          <p class="lowertext">
+            Open in 45+ cities for Delivery & Dine in. India biggest Biryani
+            Delivery chain & Dine-in
+          </p>
+        </div>
+        <div class="sub2">
+          <div class="circular-img">
+            <a href=""><img src="shop-2.png" alt="" class="img-prop" /></a>
+          </div>
+          <p class="uppertext">100+ Outlets Across India</p>
+          <p class="lowertext">
+            Open in 45+ cities for Delivery & Dine in. India biggest Biryani
+            Delivery chain & Dine-in
+          </p>
+        </div>
+        <div class="sub3">
+          <div class="circular-img">
+            <a href=""><img src="shop-3.png" alt="" class="img-prop" /></a>
+          </div>
+          <p class="uppertext">100+ Outlets Across India</p>
+          <p class="lowertext">
+            Open in 45+ cities for Delivery & Dine in. India biggest Biryani
+            Delivery chain & Dine-in
+          </p>
+        </div>
+        <div class="sub4">
+          <div class="circular-img">
+            <a href=""><img src="shop-4.png" alt="" class="img-prop" /></a>
+          </div>
+          <p class="uppertext">100+ Outlets Across India</p>
+          <p class="lowertext">
+            Open in 45+ cities for Delivery & Dine in. India biggest Biryani
+            Delivery chain & Dine-in
+          </p>
+        </div>
       </div>
     </div>
+    <div class="menu-text">
+      <p>Our Menu</p>
+    </div>
+    <div class="menu-bar upper">
+      <br />
+      <br />
+      <div class="dishes">
+        <a href=""><img src="order-1.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Hyderabadi Biryani</p>
+      </div>
+      <div class="dishes">
+        <a href=""><img src="order2.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Lucknowi Biryani</p>
+      </div>
+      <div class="dishes">
+        <a href=""><img src="order3.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Kolkata Biryani</p>
+      </div>
+      <div class="dishes">
+        <a href=""><img src="order4.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Everyday Biryani Combos</p>
+      </div>
+    </div>
+    <div class="menu-bar lower">
+      <br />
+      <div class="dishes">
+        <a href=""><img src="order5.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Curries</p>
+      </div>
+      <div class="dishes">
+        <a href=""><img src="order6.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Kebabs</p>
+      </div>
+      <div class="dishes">
+        <a href=""><img src="order7.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Beverages & Breads</p>
+      </div>
+      <div class="dishes">
+        <a href=""><img src="order8.jpg" alt="" class="dish-img" /></a>
+        <p class="dish-name uppertext">Meetha</p>
+      </div>
+    </div>
+    <div class="order-button">
+      <a href="#" class="button-order">Order Now</a>
+    </div>
+    <div class="tagline">
+      <img src="tagline-banner.jpg" class="banner-tagline" />
+      <div class="tagline-text">
+        <p class="tagline-text-heading">
+          Pioneers of Fresh Handi Biryanis - Dum cooked fresh on every order
+        </p>
+        <p class="tagline-subheading">
+          BBK prides itself in using the most fresh, highest quality ingredients
+          and most stringent quality checks & processes for preparing our food.
+          Each biryani is individually prepared in traditional dum style in
+          natural clay handis. And the same Handi Biryani is delivered to the
+          customer in which it is Dum cooked individually after that customer
+          order iss received by us.
+        </p>
+        <p class="tagline-subheading">
+          BBK takes around 30mins to fresh Dum cook each Gourmet Handi Biryani &
+          Deliver the same Handi in around 60mins to the customer. This helps
+          keeps freshness, authenticity, deliciousness & flavors. BBK brings the
+          Royal Biryani to you, prepared in the traditional dum style,
+          slow-cooked to perfection by our Khansamas.
+        </p>
+        <h2 class="main-tagline">#Bringsyoutogether</h2>
+      </div>
+    </div>
+    <div class="media-bar">
+      <div class="media-text">
+        <p>In the Media</p>
+      </div>
+      <div class="media-container">
+        <a href="#"><img src="news1.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="news2.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="news3.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="news4.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="news5.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="news6.png" alt="" class="news-logo"></a>
+      </div>
+      <div class="readall">
+        <a href="#">Read All>></a>
+      </div>
+      <div class="horizontal-line">
+
+      </div>
+    </div>
+    <div class="download-links">
+      <div class="links-left">
+        <p class="links-top-heading">Get started with the mobile app!</p>
+        <p class="links-subheading">GET <span class="bold">15% OFF</span> on every order on min. order amount of Rs 199 and above.</p>
+        <p class="links-sub-subheading">Use Code <span class="bold"> BBK15. (TnC Apply)</span></p>
+        <p class="links-subheading bold">Now Also Earn Upto 25% Loyalty Cashback on Every Website and APP Order</p>
+        <p class="bold links-sub-subheading">DOWNLOAD NOW</p>
+        <div class="store-logos">
+          <a href="#"><img src="link1.png" alt="" class="appstore"></a>
+          <a href="#"><img src="link2.png" alt="" class="playstore"></a>
+        </div>
+      </div>
+      <div class="image-right">
+        <img src="mobile-logo.jpg" alt="" class="mobile-img">
+      </div>
+    </div>
+    <footer>
+      <div class="quick-links">
+        <p class="links-header">QUICK LINKS</p>
+        <ul>
+          <li class="links-list">Our Vision</li>
+          <li class="links-list">Media</li>
+          <li class="links-list">Loyalty</li>
+          <li class="links-list">Contact Us</li>
+          <li class="links-list">Order Online</li>
+          <li class="links-list">Sponsor a Biryani</li>
+          <li class="links-list">Unsubscribe</li>
+        </ul>
+      </div>
+      <div class="stores">
+        <p class="loc-text">LOCATIONS</p>
+        <select class="phy-stores" id="">
+          <option value="">Biryani by Kilo - Rajouri Garden</option>
+          <option value="">Biryani by Kilo - Rajouri Garden</option>
+          <option value="">Biryani by Kilo - Rajouri Garden</option>
+          <option value="">Biryani by Kilo - Rajouri Garden</option>
+        </select>
+        <p class="add-top middle-font">A 20, Ground Floor, Rajouri Garden</p>
+        <p class="city middle-font">New Delhi</p>
+        <p class="phn-no middle-font">9555212212</p>
+        <p class="copyright">Copyright © 2024 Sky Gate Hospitality PVT. LTD. All Rights Reserved. | Terms & Conditions</p>
+      </div>
+      <div class="follow-links">
+        <p class="follow-text">Follow us on</p>
+        <div class="social-logos">
+          <div class="circular-logo">
+            <a class="text-logo" href="#"><i class="ri-facebook-fill"></i></a>
+          </div>
+          <div class="circular-logo">
+            <a class="text-logo" href="#"><i class="ri-twitter-fill"></i></a>
+          </div>
+          <div class="circular-logo">
+            <a class="text-logo" href="#"><i class="ri-instagram-line"></i></a>
+          </div>
+          <div class="circular-logo">
+            <a class="text-logo" href="#"><i class="ri-youtube-fill"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
