--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Biryani by Kilo</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap"
@@ -59,7 +59,7 @@
       <div class="info-container">
         <div class="sub1">
           <div class="circular-img">
-            <a href=""><img src="Shop-1.png" alt="" class="img-prop" /></a>
+            <a href=""><img src="./assets/Shop-1.png" alt="" class="img-prop" /></a>
           </div>
           <p class="uppertext">100+ Outlets Across India</p>
           <p class="lowertext">
@@ -69,7 +69,7 @@
         </div>
         <div class="sub2">
           <div class="circular-img">
-            <a href=""><img src="shop-2.png" alt="" class="img-prop" /></a>
+            <a href=""><img src="./assets/shop-2.png" alt="" class="img-prop" /></a>
           </div>
           <p class="uppertext">100+ Outlets Across India</p>
           <p class="lowertext">
@@ -79,7 +79,7 @@
         </div>
         <div class="sub3">
           <div class="circular-img">
-            <a href=""><img src="shop-3.png" alt="" class="img-prop" /></a>
+            <a href=""><img src="./assets/shop-3.png" alt="" class="img-prop" /></a>
           </div>
           <p class="uppertext">100+ Outlets Across India</p>
           <p class="lowertext">
@@ -89,7 +89,7 @@
         </div>
         <div class="sub4">
           <div class="circular-img">
-            <a href=""><img src="shop-4.png" alt="" class="img-prop" /></a>
+            <a href=""><img src="./assets/shop-4.png" alt="" class="img-prop" /></a>
           </div>
           <p class="uppertext">100+ Outlets Across India</p>
           <p class="lowertext">
@@ -106,38 +106,38 @@
       <br />
       <br />
       <div class="dishes">
-        <a href=""><img src="order-1.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order-1.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Hyderabadi Biryani</p>
       </div>
       <div class="dishes">
-        <a href=""><img src="order2.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order2.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Lucknowi Biryani</p>
       </div>
       <div class="dishes">
-        <a href=""><img src="order3.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order3.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Kolkata Biryani</p>
       </div>
       <div class="dishes">
-        <a href=""><img src="order4.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order4.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Everyday Biryani Combos</p>
       </div>
     </div>
     <div class="menu-bar lower">
       <br />
       <div class="dishes">
-        <a href=""><img src="order5.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order5.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Curries</p>
       </div>
       <div class="dishes">
-        <a href=""><img src="order6.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order6.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Kebabs</p>
       </div>
       <div class="dishes">
-        <a href=""><img src="order7.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order7.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Beverages & Breads</p>
       </div>
       <div class="dishes">
-        <a href=""><img src="order8.jpg" alt="" class="dish-img" /></a>
+        <a href=""><img src="./assets/order8.jpg" alt="" class="dish-img" /></a>
         <p class="dish-name uppertext">Meetha</p>
       </div>
     </div>
@@ -145,7 +145,7 @@
       <a href="#" class="button-order">Order Now</a>
     </div>
     <div class="tagline">
-      <img src="tagline-banner.jpg" class="banner-tagline" />
+      <img src="./assets/tagline-banner.jpg" class="banner-tagline" />
       <div class="tagline-text">
         <p class="tagline-text-heading">
           Pioneers of Fresh Handi Biryanis - Dum cooked fresh on every order
@@ -173,12 +173,12 @@
         <p>In the Media</p>
       </div>
       <div class="media-container">
-        <a href="#"><img src="news1.png" alt="" class="news-logo"></a>
-        <a href="#"><img src="news2.png" alt="" class="news-logo"></a>
-        <a href="#"><img src="news3.png" alt="" class="news-logo"></a>
-        <a href="#"><img src="news4.png" alt="" class="news-logo"></a>
-        <a href="#"><img src="news5.png" alt="" class="news-logo"></a>
-        <a href="#"><img src="news6.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="./assets/news1.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="./assets/news2.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="./assets/news3.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="./assets/news4.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="./assets/news5.png" alt="" class="news-logo"></a>
+        <a href="#"><img src="./assets/news6.png" alt="" class="news-logo"></a>
       </div>
       <div class="readall">
         <a href="#">Read All>></a>
@@ -195,12 +195,12 @@
         <p class="links-subheading bold">Now Also Earn Upto 25% Loyalty Cashback on Every Website and APP Order</p>
         <p class="bold links-sub-subheading">DOWNLOAD NOW</p>
         <div class="store-logos">
-          <a href="#"><img src="link1.png" alt="" class="appstore"></a>
-          <a href="#"><img src="link2.png" alt="" class="playstore"></a>
+          <a href="#"><img src="./assets/link1.png" alt="" class="appstore"></a>
+          <a href="#"><img src="./assets/link2.png" alt="" class="playstore"></a>
         </div>
       </div>
       <div class="image-right">
-        <img src="mobile-logo.jpg" alt="" class="mobile-img">
+        <img src="./assets/mobile-logo.jpg" alt="" class="mobile-img">
       </div>
     </div>
     <footer>
